@@ -666,7 +666,7 @@ restart:
         else out_state=verbatim; break;
       case '/': C_putc('/'); out_state=post_slash; break;
       case '*': if (out_state==post_slash) C_putc(' ');
-        /* fall through */
+        @=/* fall through */@>
       default: C_putc(cur_char); out_state=normal; break;
     }
 }
@@ -1510,7 +1510,7 @@ skip_limbo(void)
             err_print("! Double @@ should be used in control text");
 @.Double @@ should be used...@>
           break;
-          } /* otherwise fall through */
+          } @=/* otherwise fall through */@>
         default: err_print("! Double @@ should be used in limbo");
 @.Double @@ should be used...@>
       }
